# sygil-webui

./: .dockerignore  .env_docker.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile_base  Dockerfile_runpod  README.md  README_Docker.md  README_dev.md  Stable_Diffusion_v1_Model_Card.md  Web_based_UI_for_Stable_Diffusion_colab.ipynb  _config.yml  attention.py  build_docker.sh  daisi_app.py  db.json  db_dep.json  docker-compose.amd.yml  docker-compose.override.yml  docker-compose.yml  docker-reset.sh  docusaurus.config.js  entrypoint.sh  environment.yaml  ext_requirements.txt  frontend.py  horde_bridge.cmd  horde_bridge.sh  index.html  package.json  prep_cmd.cmd  pyproject.toml  quickstart.cmd  relauncher.py  requirements.txt  (+22 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  sync.yml
.streamlit/: config.toml
blog/: atom.xml  index.html  rss.xml
data/: artists.txt
docs/: 1.installation.md  1.linux-installation.md  1.windows-installation.md  2.cli.md  2.linux-installation.md  3.cli.md  3.custom-models.md  3.docker-guide.md  3.streamlit-interface.md  4.post-processing.md  4.streamlit-interface.md  4.upscalers.md  44.competition.md  5.concepts-library.md  5.gradio-interface.md  5.image_enhancers.md  5.upscalers.md  6.cli.md  6.custom-models.md  6.image_enhancers.md  7.concepts-library.md  8.custom-models.md
frontend/: .eslintrc.js  CODEOWNERS  css_and_js.py  frontend.py  image_metadata.py  index.html  job_manager.py  package.json  tsconfig.json  tsconfig.node.json  ui_functions.py  ui_image_lab.py  ui_image_to_image.py  ui_text_to_image.py  vite.config.ts
installer/: create_installers.sh  install.bat  install.sh  readme.txt
ldm/: lr_scheduler.py  util.py
markdown-page/: index.html
scripts/: home.py  (+50 more)
(+346 files in other folders)
